--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					<div class="projects-markup">
 						<h3 class="projects-h3">Mylib</h3>
 						<span class="projects-span">Component library with html and css code examples</span>
-						<a class="projects-gitlab" href="http://spangles-maldoune.github.io/mylib" target="_blank">gitlab
+						<a class="projects-gitlab" href="https://spangles-maldoune.github.io/myLib.github.io/" target="_blank">github
 							<svg xmlns="http://www.w3.org/2000/svg" width="28" height="8" fill="none" viewBox="2 0 30 12">
 								<g clip-path="url(#prefix)">
 									<path fill="#C01418" d="M23.196.03c.215-.051.447-.03.625.053l6.858 3.646c.107.062.178.146.178.24 0 .093-.071.187-.178.25L23.82 7.915c-.178.084-.41.105-.625.052-.196-.052-.339-.166-.339-.302V5.333H.571C.25 5.333 0 5.187 0 5V3c0-.188.25-.334.571-.334h22.286V.333c0-.135.125-.25.34-.302z"/>
@@ -188,7 +188,7 @@
 					<div class="projects-markup">
 						<h3 class="projects-h3">Adaptive Layout Example</h3>
 						<span class="projects-span">html page with burger menu</span>
-						<a class="projects-gitlab" href="#">gitlab
+						<a class="projects-gitlab" href="https://spangles-maldoune.github.io/markup-adaptive.github.io/" target="_blank">github
 							<svg xmlns="http://www.w3.org/2000/svg" width="28" height="8" fill="none" viewBox="2 0 30 12">
 								<g clip-path="url(#prefix)">
 									<path fill="#C01418" d="M23.196.03c.215-.051.447-.03.625.053l6.858 3.646c.107.062.178.146.178.24 0 .093-.071.187-.178.25L23.82 7.915c-.178.084-.41.105-.625.052-.196-.052-.339-.166-.339-.302V5.333H.571C.25 5.333 0 5.187 0 5V3c0-.188.25-.334.571-.334h22.286V.333c0-.135.125-.25.34-.302z"/>
