--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 								<span class="tel-number">+38 099 031 84 49</span>
 							</li>
 							<li class="nav-list-item">
-								<span class="nav-list-span">Whant to collaborate?</span>
+								<span class="nav-list-span">Do you want to collaborate?</span>
 								<a class="nav-list-art" href="mailto:spangles.maldoune@gmail.com">
 									<span>email me</span>
 									<svg class="arrow-svg" xmlns="http://www.w3.org/2000/svg" width="32" height="8" fill="none" viewBox="0 0 32 8">
@@ -218,7 +218,7 @@
 			</section>
 		</main>
 		<footer class="footer">
-			<span class="nav-list-span">Whant to collaborate?</span>
+			<span class="nav-list-span">Do you want to collaborate?</span>
 			<a class="nav-list-art" href="mailto:spangles.maldoune@gmail.com">
 				<span>email me</span>
 				<svg class="arrow-svg" xmlns="http://www.w3.org/2000/svg" width="32" height="8" fill="none" viewBox="0 0 32 8">
