--- a/index.html
+++ b/index.html
@@ -193,6 +193,23 @@
 							</svg>
 						</a>
 					</div>
+
+					<div class="projects-markup">
+						<h3 class="projects-h3">Adaptive responsive layout</h3>
+						<span class="projects-span">html page name "Mikocin"</span>
+						<a class="projects-gitlab" href="https://spangles-maldoune.github.io/mikocin/" target="_blank">github
+							<svg xmlns="http://www.w3.org/2000/svg" width="28" height="8" fill="none" viewBox="2 0 30 12">
+								<g clip-path="url(#prefix)">
+									<path fill="#C01418" d="M23.196.03c.215-.051.447-.03.625.053l6.858 3.646c.107.062.178.146.178.24 0 .093-.071.187-.178.25L23.82 7.915c-.178.084-.41.105-.625.052-.196-.052-.339-.166-.339-.302V5.333H.571C.25 5.333 0 5.187 0 5V3c0-.188.25-.334.571-.334h22.286V.333c0-.135.125-.25.34-.302z"/>
+								</g>
+								<defs>
+									<clipPath id="prefix">
+										<path fill="#fff" d="M0 8H8V40H0z" transform="rotate(-90 0 8)"/>
+									</clipPath>
+								</defs>
+							</svg>
+						</a>
+					</div>
 				</div>
 			</section>
 			<section class="parallax"></section>
