--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 				</section>
 				<section class="header-backgrnd-middle">
 					<div class="hero-text">
-						<span class="hero-span">since 2020</span>
-						<h2 class="hero-h2">Markup Developer</h2>
-						<p class="hero-p">Strong professional focus and personal interest to UI/UX design and Front-End engineering</p>
+						<span class="hero-span">since 2019</span>
+						<h2 class="hero-h2">Front-End Developer</h2>
+						<p class="hero-p">Strong professional focus and personal interest to UI/UX design and Front-End engineering with Vue.js</p>
 					</div>
 					<div class="scroll">
 						<span class="scroll-span">Scroll</span>
@@ -110,6 +110,18 @@
 				<div class="skills-list">
 					<ul>
 						<li class="skills-item">
+							<span class="skills-desc">Java Script (ES5, ES6)</span>
+						</li>
+						<li class="skills-item">
+							<span class="skills-desc">AJAX</span>
+						</li>
+						<li class="skills-item">
+							<span class="skills-desc">npm</span>
+						</li>
+						<li class="skills-item">
+							<span class="skills-desc">Vue.js</span>
+						</li>
+						<li class="skills-item">
 							<span class="skills-desc">HTML/CSS</span>
 						</li>
 						<li class="skills-item">
@@ -122,7 +134,7 @@
 							<span class="skills-desc">jQuery</span>
 						</li>
 						<li class="skills-item">
-							<span class="skills-desc">CSS Preprocessors</span>
+							<span class="skills-desc">CSS Preprocessors <br>(SASS, SCSS)</span>
 						</li>
 						<li class="skills-item">
 							<span class="skills-desc">gulp</span>
@@ -132,6 +144,18 @@
 						</li>
 					</ul>
 					<ul>
+						<li class="progress-item">
+							<span class="progress-bar java-script"></span>
+						</li>
+						<li class="progress-item">
+							<span class="progress-bar ajax"></span>
+						</li>
+						<li class="progress-item">
+							<span class="progress-bar npm"></span>
+						</li>
+						<li class="progress-item">
+							<span class="progress-bar vue"></span>
+						</li>
 						<li class="progress-item">
 							<span class="progress-bar html"></span>
 						</li>
@@ -205,6 +229,24 @@
 								<defs>
 									<clipPath id="prefix">
 										<path fill="#fff" d="M0 8H8V40H0z" transform="rotate(-90 0 8)"/>
+									</clipPath>
+								</defs>
+							</svg>
+						</a>
+					</div>
+
+					<div class="projects-markup">
+						<h3 class="projects-h3">Adaptive responsive layout</h3>
+						<span class="projects-span">SPA on Vue.js "Superclinic"</span>
+						<a class="projects-gitlab" href="https://github.com/spangles-maldoune/superclinic" target="_blank">github
+							<svg xmlns="http://www.w3.org/2000/svg" width="28" height="8" fill="none" viewBox="2 0 30 12">
+								<g clip-path="url(#prefix)">
+									<path fill="#C01418"
+										d="M23.196.03c.215-.051.447-.03.625.053l6.858 3.646c.107.062.178.146.178.24 0 .093-.071.187-.178.25L23.82 7.915c-.178.084-.41.105-.625.052-.196-.052-.339-.166-.339-.302V5.333H.571C.25 5.333 0 5.187 0 5V3c0-.188.25-.334.571-.334h22.286V.333c0-.135.125-.25.34-.302z" />
+								</g>
+								<defs>
+									<clipPath id="prefix">
+										<path fill="#fff" d="M0 8H8V40H0z" transform="rotate(-90 0 8)" />
 									</clipPath>
 								</defs>
 							</svg>
