--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 							</svg>
 						</a>
 					</li>
+                    <li class="social-list-item">
+                        <a href="https://github.com/spangles-maldoune" target="blanc" class="list-item-linkedin">
+                            <svg viewBox="0 0 16 16" version="1.1" width="25" height="28" aria-hidden="true">
+                                <path fill="#75715E" fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+                            </svg>
+                        </a>
+                    </li>
 					<li class="social-list-item">
 						<a href="https://gitlab.com/Ukhin" target="blanc" class="list-item-gitlab">
 							<svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="none" viewBox="0 0 28 28">
@@ -274,6 +281,23 @@
 						</svg>
 					</a>
 				</div>
+                <div class="exp-item">
+                    <span class="exp-span">march 2020 - august 2020</span>
+                    <h3 class="exp-h3">IT school Hillel</h3>
+                    <span class="exp-desc">Front-end pro course</span>
+                    <a class="certificate" href="img/52368810_en.png" target="blanc">certificate
+                        <svg xmlns="http://www.w3.org/2000/svg" width="28" height="8" fill="none" viewBox="2 0 30 12">
+                            <g clip-path="url(#prefix)">
+                                <path fill="#C01418" d="M23.196.03c.215-.051.447-.03.625.053l6.858 3.646c.107.062.178.146.178.24 0 .093-.071.187-.178.25L23.82 7.915c-.178.084-.41.105-.625.052-.196-.052-.339-.166-.339-.302V5.333H.571C.25 5.333 0 5.187 0 5V3c0-.188.25-.334.571-.334h22.286V.333c0-.135.125-.25.34-.302z"/>
+                            </g>
+                            <defs>
+                                <clipPath id="prefix">
+                                    <path fill="#fff" d="M0 8H8V40H0z" transform="rotate(-90 0 8)"/>
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+                </div>
 			</section>
 		</main>
 		<footer class="footer">
