--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 				$('.welcome').toggleClass('welcome-active');
 				$('.hero-text').toggleClass('hero-active');
 				$('.btn-area').toggleClass('burger-active');
-				$('.scroll').toggleClass('scroll-active');
+				// $('.scroll').toggleClass('scroll-active');
 			});
 		});
 	</script>
